# git-panel

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts
.codex/: config.toml
.codex/skills/container-presentational-boundaries/: SKILL.md
.codex/skills/ui-component-extraction/: SKILL.md
e2e/: changelist-context-menu.spec.ts  changelist-selection.spec.ts  commit-dialog.spec.ts  diff-scroll.spec.ts  unversioned-files.spec.ts
scripts/: copy-material-icons.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/changelist/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/watch/: mod.rs
src/api/: tauri.ts
src/components/: ChangelistPanel.tsx  CommitPanel.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx  ThemeProvider.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx
src/lib/: utils.ts
src/refactor/: App.tsx
src/refactor/components/: BranchPanel.tsx  ChangesPanel.tsx  DiffView.tsx  LeftNavPanel.tsx  WatcherPill.tsx  WelcomePage.tsx  WorktreeSwitcher.tsx
src/refactor/components/ui/: button.tsx  toast.tsx
src/refactor/styles/: index.css  tailwind.css
src/state/: store.ts
src/testing/: installE2ETauriMocks.ts
src/types/: ipc.ts
src/ui/: RepositoryPicker.tsx
src/workers/: diffWorker.ts
