[package]
name = "git-panel"
version = "0.1.0"
description = "Git Panel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
git2 = "0.18.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-dialog = "2.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
